samples/_failures_safe/1761367033_d19a5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_523dcd37.c: In function ‘main’:
./samples/SAFE/__tmp_523dcd37.c:184:12: error: expected identifier or ‘(’ at end of input
  184 |     struct context
      |            ^~~~~~~
./samples/SAFE/__tmp_523dcd37.c:184:12: error: expected declaration or statement at end of input
